Create transitive access widener module